5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1834_2603.log
== SUBMITION (2019-07-02 15:31:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("matriz: ")))

for i uin range(shape(mat)[1]):
	mat[:,1] = sorted(mat[:,1], reverse=True)
print(mat)
-- EXECUTION TIME:
0.810256
-- ERROR:
  File "/home/codebench/codes/1834/2603/main.py", line 6
    for i uin range(shape(mat)[1]):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:32:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("matriz: ")))

for i in range(shape(mat)[1]):
	mat[:,1] = sorted(mat[:,1], reverse=True)
print(mat)
-- EXECUTION TIME:
1.04037
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[1 4 1 1]
 [2 3 2 2]
 [3 2 3 3]
 [4 1 4 4]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 1 3]
 [3 3 2 3]
 [2 2 3 3]
 [1 1 4 3]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:33:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("matriz: ")))

for i in range(shape(mat)[1]):
	mat[:,1] = sorted(mat[:,1], reverse=True)
print(matriz)
-- EXECUTION TIME:
1.02028
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2603/main.py", line 8, in <module>
    print(matriz)
NameError: name 'matriz' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:34:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))

for i in range(shape(matriz)[1]):
	matriz[:,1] = sorted(matriz[:,1], reverse=True)
print(matriz)
-- EXECUTION TIME:
1.20244
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[1 4 1 1]
 [2 3 2 2]
 [3 2 3 3]
 [4 1 4 4]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 1 3]
 [3 3 2 3]
 [2 2 3 3]
 [1 1 4 3]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:34:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))

for i in range(shape(matriz)[1]):
	matriz[:,i] = sorted(matriz[:,i], reverse=True)
print(matriz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:34:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("matriz: ")))

for i in range(shape(matriz)[1]):
	matriz[:,i] = sorted(matriz[:,i], reverse=True)
print(matriz)
-- EXECUTION TIME:
1.04966
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
